# synthetic-public-sector-ticket-classifier

./: .env.example  .gitignore  FUTURE_LOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  pr-checks.yml  train.yml
data/: test.jsonl  train.jsonl  validation.jsonl
docker/: Dockerfile  docker-compose.yml
docs/: MODEL_CARD.md  data-safety-checklist.md  huggingface-publishing-guide.md  model-card-template.md  model-training-vs-finetuning.md
infra/: main.bicep  main.dev.bicepparam
infra/modules/: container-app.bicep  container-registry.bicep  key-vault.bicep  log-analytics.bicep  ml-workspace.bicep
model/: README.md  __init__.py  config.json  eval_metrics.json  inference.py  model.py  model.safetensors  tokenizer.json  tokenizer_config.json  train.py  training_args.json
src/inference/: __init__.py  app.py  audit.py  logging.py  model.py
src/monitoring/: drift.py
src/ticket_classifier/: __init__.py  config.py  data_validate.py  evaluate_model.py  labels.py  model_card.py  predict.py  publish_to_hub.py  run_exam.py  train.py
tests/: test_audit.py  test_data_validate.py  test_drift.py  test_inference.py  test_labels.py  test_predict_mock.py  test_smoke.py  test_train.py
tools/: generate_dataset.py
